--- a/final.html
+++ b/final.html
@@ -3,9 +3,9 @@
 <meta charset="utf-8">
 <title>Issues Ratings</title>
 
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="http://d3js.org/queue.v1.min.js"></script>
-<script src="http://d3js.org/topojson.v1.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/queue.v1.min.js"></script>
+<script src="https://d3js.org/topojson.v1.min.js"></script>
 <script src="d3-tip.js"></script>
 <script src="chart.js"></script>
 <script src="jquery.min.js"></script>
