--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
 	<title>Front Page: TwitInfo</title>
 	<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -20,14 +19,6 @@
 	<!-- Bootstrap -->
 	<link type="text/css" rel="stylesheet" href="css/boots.css" />
 
-	
-
-	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-	<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-	<!--[if lt IE 9]>
-		  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-		  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-		<![endif]-->
 
 </head>
 
@@ -78,7 +69,7 @@
 
 
 <div class="w3-third">
-  <img src="img/Saurabh.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity"></a>
+  <img src="img/Saurabh.jpeg" alt="Boss" style="width:45%" class="w3-circle w3-hover-opacity">
   <h3>Saurabh Goyal</h3>
   <h6>sgoyal@asu.edu</h6>
   <h4><a href="https://www.linkedin.com/in/saur30490">LinkedIn</a></h4>
